--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -1,3 +1,23 @@
 // Place all the styles related to the posts controller here.
-// They will automatically be included in application.css.
+// They will automatically be included in application.scss.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#admin-view {
+  float: right;
+  list-style: none;
+  border-style: solid;
+  border-color:#0b2d3148;
+  border-width: 1px;
+  padding: 5px 20px;
+  margin-right: 10px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 14px;
+  box-shadow: #2E2F30;
+  cursor: pointer;
+  border-radius: 30px;
+}
+
+#table:nth-child(even) {
+  background-color: #BBBBBB;
+}
