fix admin emails

--- a/app/views/user_mailer/admin_panel_email.text.erb
+++ b/app/views/user_mailer/admin_panel_email.text.erb
@@ -1,6 +1,6 @@
 This is automated message from Image Uploader by Hard Worker.
 
-  <%= @user.email %> just viewed users list.
+  <%=     @current_user.email %> just viewed users list.
 
 
 Thanks and have a great day!
