--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,11 +7,15 @@
   <li>
     <%= user.email %>
     <%= link_to 'Show', user %>
+    <% if user.is_admin?  %>
+       is admin!!!!
+    <% end %>
     <% user.roles.each do |role| %>
       <%= role.name %>
   <% end %>
   </li>
 </ul>
+
 <% end %>
 
 <%= link_to 'Back', posts_path %>
