add user controller tests

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,5 +37,7 @@
   </div>
   </body>
 
-  <%= console %>
+  <% if Rails.env.development? || Rails.env.staging? %>
+  <% console %>
+<% end %>
 </html>
