--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -2,11 +2,16 @@
 <div>
 <%=  link_to 'Admin View', { controller: "users", action: :index} ,class: "btn btn-primary", id: "admin-view"  if policy(@posts).show? %>
 </div>
-<%#= link_to '#', :class => '' do %>
-<!--   jirojgioer-->
-<%# end %>
 
 <h1>Posts</h1>
+
+<div>
+  <%= link_to 'All Posts', posts_path %>
+  <%= form_tag posts_path ,method: :get do %>
+    <% text_field_tag :q, nil ,placeholder: 'Search posts'%>
+  <% end %>
+
+</div>
 
 <table class="table table-dark">
   <thead>
@@ -22,6 +27,7 @@
       <tr id="table">
         <td><%= post.title %></td>
         <td><%= image_tag post.image_url :thumb if post.image? %> </td>
+        <td>comments: <%= post.comments.size %></td>
         <td><%= link_to 'Show', post %></td>
           <td><%= link_to 'Edit', edit_post_path(post) if policy(post).edit? %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } if policy(post).destroy?%></td>
