--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,7 @@
   <%= image_tag @post.image_url if @post.image? %>
 </p>
 
-<h3>Comments</h3>
+<h3><%= @comments.size %>  Comments:</h3>
 <% @post.comments.each do |comment| %>
   <p>
     <b>Commenter:</b>
