--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -10,8 +10,11 @@
   <%= form_tag posts_path ,method: :get do %>
     <% text_field_tag :q, nil ,placeholder: 'Search posts'%>
   <% end %>
-
 </div>
+
+<%= link_to 'Categories', categories_path %>
+<%#= link_to 'Subcategories', subcategory_index_path %>
+
 
 <table class="table table-dark">
   <thead>
@@ -27,7 +30,11 @@
       <tr id="table">
         <td><%= post.title %></td>
         <td><%= image_tag post.image_url :thumb if post.image? %> </td>
-        <td>comments: <%= post.comments.size %></td>
+        <td> <% if post.comments.size == 0 %>
+           No comments
+        <% else %>
+           comments: <%= post.comments.size %>
+        <% end %></td>
         <td><%= link_to 'Show', post %></td>
           <td><%= link_to 'Edit', edit_post_path(post) if policy(post).edit? %></td>
         <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } if policy(post).destroy?%></td>
