--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,8 @@
   <div class="container">
     <div class="col">
       <div class="row">
-        <%= render partial: "shared/login_form" %><br/>
+        <%= render partial: "shared/login_form" %>
+        <%= render partial: "shared/nav-bar" %><br/>
       </div>
       <div class="row">
         <%= yield %>
