--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -14,6 +14,7 @@
     <% @categories.each do |category| %>
       <tr id="table">
         <td> <%= category.name %> </td>
+        <td><%= link_to 'Show', category %></td>
       </tr>
     <% end %>
     </tbody>
