--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -21,6 +21,7 @@
     <tr>
       <th>Title</th>
       <th>Image</th>
+      <th>Category</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -30,6 +31,7 @@
       <tr id="table">
         <td><%= post.title %></td>
         <td><%= image_tag post.image_url :thumb if post.image? %> </td>
+        <td> <%= post.category.name %> </td>
         <td> <% if post.comments.size == 0 %>
            No comments
         <% else %>
