--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Category#index</h1>
 <p>Find me in app/views/category/index.html.erb</p>
-<%= link_to 'New Category', categories_new_path %>
+<%= link_to 'New Category', new_category_path %>
 
   <table class="table table-dark">
     <thead>
