--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,14 +11,14 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="field" >
     <%= form.label :title %>
-    <%= form.text_field :title %>
+    <%= form.text_field :title , :required => true%>
   </div>
 
   <div class="field">
     <%= form.label :categories %>
-  <%= form.collection_select(:category_id, Category.all, :id, :name)%>
+    <%= form.collection_select(:category_id, Category.all, :id, :name)%>
   </div>
 
   <div class="field">
