--- a/app/views/shared/_nav-bar.html.erb
+++ b/app/views/shared/_nav-bar.html.erb
@@ -1,4 +1,5 @@
 <p class="navbar-text float-right">
     <%= link_to 'Posts', posts_path, :class => 'navbar-link' %> |
-    <%= link_to "Categories", categories_path, :class => 'navbar-link'  %>
+    <%= link_to "Categories", categories_path, :class => 'navbar-link' %> |
+    <%= link_to "Subcategories", subcategories_path, :class => 'navbar-link'  %>
 </p>
