--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,4 +15,4 @@
 <h4> Last update</h4>
 <h5> <%= @user.updated_at %></h5>
 
-<%= link_to 'Back', users_index_path %>
+<%= link_to 'Back', users_path %>
