--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,5 @@
-<h1>Category#index</h1>
-<p>Find me in app/views/category/index.html.erb</p>
+<h1>Categories:</h1>
+
 <%= link_to 'New Category', new_category_path %>
 
   <table class="table table-dark">
