--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -17,8 +17,14 @@
   </div>
 
   <div class="field">
-    <%= form.label :categories %>
-    <%= form.collection_select(:category_id, Category.all, :id, :name)%>
+    <%= form.label :category_id, 'Categories' %>
+    <%= form.collection_select(:category_id, Category.all, :id, :name , {}, {class: "selectize"})%>
+    <%#= form.select :category_id, Category.all.pluck(:name, :id), {}, {class: "selectize"} %>
+  </div>
+
+  <div class="field">
+    <%= form.label :subcategory_ids, 'Subcategories' %>
+    <%= form.select :subcategory_ids, Subcategory.all.pluck(:name, :id), {}, {multiple: true, class: "selectize"} %>
   </div>
 
   <div class="field">
