--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -32,8 +32,7 @@
     <% @posts.each do |post| %>
       <tr id="table">
         <td><%= post.title %></td>
-        <% index_of_at = post.user.email.index('@') %>
-        <td><%= post.user.email[0,index_of_at] %></td>
+        <td><%= post.user.email %></td>
         <td><%= image_tag post.image_url :thumb if post.image? %> </td>
         <td> <%= post.category.name %> </td>
         <td> <% if post.comments.size == 0 %>
