--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -2,7 +2,7 @@
 
   <% if category.errors.any? %>
     <div id="error_explanation">
-      <h2><%= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>
+<!--      <h2><%#= pluralize(post.errors.count, "error") %> prohibited this post from being saved:</h2>-->
 
       <ul>
         <% category.errors.full_messages.each do |message| %>
