--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -15,6 +15,8 @@
       <tr id="table">
         <td> <%= category.name %> </td>
         <td><%= link_to 'Show', category %></td>
+        <td><%= link_to 'Destroy', category, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+
       </tr>
     <% end %>
     </tbody>
