--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,4 @@
-
-
-<h4> Users list</h4>
+<h4> Users list:</h4>
 
 <% @users.each do |user|  %>
 <ul>
@@ -12,7 +10,7 @@
   <% end %>
   </li>
 </ul>
-
 <% end %>
 
-<%= link_to 'Back', posts_path %>
+<%= link_to 'Back', posts_path, :class => 'btn btn-primary btn-xs mb-4'%>
+<%= link_to 'Export CSV', 'users.csv', :format => :csv, :class => 'btn btn-primary btn-xs mb-4' %>
