--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,4 +13,5 @@
 <% end %>
 
 <%= link_to 'Back', posts_path, :class => 'btn btn-primary btn-xs mb-4'%>
-<%= link_to 'Export CSV', 'users.csv', :format => :csv, :class => 'btn btn-primary btn-xs mb-4' %>
+<%= link_to 'Export CSV', users_path(format: 'csv'), :class => 'btn btn-primary btn-xs mb-4' %>
+<!--:format => :csv-->
