add auto email csv

--- a/app/views/user_mailer/admin_panel_email.html.erb
+++ b/app/views/user_mailer/admin_panel_email.html.erb
@@ -6,7 +6,7 @@
 <body>
 <h1>This is automated message from Image Uploader by Hard Worker.</h1>
 <p>
-  <%= @current_user.email %> just viewed users list.<br>
+  Please find attached users list.<br>
 </p>
 
 <p>Thanks and have a great day!</p>
