--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -14,4 +14,4 @@
 
 <%= link_to 'Back', posts_path, :class => 'btn btn-primary btn-xs mb-4'%>
 <%= link_to 'Export CSV', users_path(format: 'csv'), :class => 'btn btn-primary btn-xs mb-4' %>
-<!--:format => :csv-->
+<%= link_to 'Email CSV', email_users_list_users_path, :class =>  'btn btn-primary btn-xs mb-4'%>
