--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -1,3 +1,3 @@
-<h1>Category#new</h1>
-<p>Find me in app/views/category/new.html.erb</p>
+<h1>New Category</h1>
+
 <%= render 'form', category: @category %>
